--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -37,9 +37,11 @@ main .section.cards-container {
 .cards .cards-card-image picture {
   display: block;
   position: relative;
-  height: 100%;
   width: 100%;
   margin: 0 auto;
+  /* Default aspect ratio to prevent CLS - will be overridden by JS */
+  aspect-ratio: 16/9;
+  padding-bottom: 0; /* Reset any padding-bottom */
 }
 
 .cards .cards-card-image picture img {
@@ -50,4 +52,11 @@ main .section.cards-container {
   width: 100%;
   object-fit: contain;
   object-position: center center;
+  /* Ensure smooth loading */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.cards .cards-card-image picture img.loaded {
+  opacity: 1;
 }
