--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -38,10 +38,12 @@ main .section.cards-container {
   display: block;
   width: 100%;
   margin: 0 auto;
+  /* aspect-ratio will be set by JavaScript */
 }
 
 .cards .cards-card-image picture img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: contain;
   display: block;
 }
