--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -38,12 +38,11 @@ main .section.cards-container {
   display: block;
   width: 100%;
   margin: 0 auto;
-  /* aspect-ratio will be set by JavaScript */
 }
 
 .cards .cards-card-image picture img {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: auto;
   display: block;
+  max-width: 100%;
 }
