--- a/blocks/section-background/section-background.css
+++ b/blocks/section-background/section-background.css
@@ -5,10 +5,7 @@
 
 .section-background picture {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
     z-index: -1;
     width: 100%;
 }
