--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -16,20 +16,19 @@
 
 .hot-topics ul {
   display: grid;
-  column-gap: 24px;
-  row-gap: 24px;
+  gap: 24px;
   grid-template-columns: auto;
   align-items: center;
   padding-inline: 0;
 }
 
-@media (min-width: 600px) {
+@media (width >= 600px) {
   .hot-topics ul {
     grid-template-columns: repeat(2,minmax(0,1fr));
   }
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   .hot-topics ul {
     grid-template-columns: repeat(3,minmax(0,1fr));
   }
@@ -83,7 +82,7 @@
   text-align: center;
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   .latest-info .columns > div {
     align-items: unset;
   }
@@ -99,7 +98,7 @@
   max-width: unset;
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   .previous-winners h2 {
     width: 50%;
     margin: 0;
