--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -12,7 +12,7 @@ main .section.cards-container {
 }
 
 .cards > ul > li {
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 10%);
   background-color: var(--background-color);
   border-radius: 10px;
   padding: 1rem;
