--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -57,7 +57,7 @@
     background-position: center;
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
     .columns > div {
         display: flex;
         align-items: center;
