--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -40,7 +40,7 @@ footer #back-to-top .arrow-up {
 }
 
 /* desktop nav styles */
-@media (min-width: 1000px) {
+@media (width >= 1000px) {
   footer .footer-inner {
     flex-direction: row;
   }
