--- a/blocks/winners-carousel/winners-carousel.css
+++ b/blocks/winners-carousel/winners-carousel.css
@@ -13,7 +13,7 @@ main .winners-carousel {
   scrollbar-width: none; /* Firefox */
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   main .winners-carousel {
     width: 50%;
   }
@@ -100,7 +100,7 @@ main .winners-carousel .carousel-nav.carousel-nav-right::after {
   content: '>';
 }
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   main .winners-carousel .carousel-nav.carousel-nav-right {
     right: 52%;
   }
