--- a/styles/styles.css
+++ b/styles/styles.css
@@ -397,7 +397,37 @@ main .section.highlight {
   width: 100%;
 }
 
+.section.blue-header.video > video {
+  visibility: hidden;
+}
+
+.section.blue-header.video {
+  background: linear-gradient(90deg, rgb(61 89 168 / 100%) 0%, rgb(61 89 168 / 70%) 100%);
+}
+
 @media (width >= 900px) {
+  .section.blue-header.video {
+    position: relative;
+    overflow: hidden;
+    background: #262626;
+  }
+
+  .section.blue-header.video > video {
+    visibility: visible;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+
+  .section.blue-header > div {
+    position: relative;
+    z-index: 1;
+  }
+
   .submission-guide-content {
     flex: 2;
   }
